--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="popup"><h3>👏Gratulacje! osiągnołeś 100 kliknięć</h3></div>  
   <div class="num"><p>0</p></div>    
     <div class="btnContainer">
         <button class="click">click</button>  
